tests/lang/compile_fail/cptr_to_string_removed.kojs
ptr: CPtr<UInt8> = CPtr.null()
ptr.to_string()
